--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,22 +19,24 @@ android {
         }
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', "\"6e358a828b644d2880f9745b1db7b8e8\""
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', '"6e358a828b644d2880f9745b1db7b8e8"'
     }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    def supportVersion = '24.2.0'
+    def gpsVersion = '9.4.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.android.support:support-annotations:24.2.0'
-    compile 'com.android.support:gridlayout-v7:24.2.0'
-    compile 'com.android.support:cardview-v7:24.2.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile "com.android.support:support-annotations:${supportVersion}"
+    compile "com.android.support:gridlayout-v7:${supportVersion}"
+    compile "com.android.support:cardview-v7:${supportVersion}"
+    compile "com.android.support:appcompat-v7:${supportVersion}"
+    compile "com.android.support:design:${supportVersion}"
+    compile "com.android.support:recyclerview-v7:${supportVersion}"
     compile 'com.google.android.apps.muzei:muzei-api:2.0'
-    compile 'com.google.android.gms:play-services-gcm:9.4.0'
-    compile 'com.google.android.gms:play-services-location:9.4.0'
-    compile 'com.google.android.gms:play-services-wearable:9.4.0'
-    compile 'com.google.android.gms:play-services-places:9.4.0'
+    compile "com.google.android.gms:play-services-gcm:${gpsVersion}"
+    compile "com.google.android.gms:play-services-location:${gpsVersion}"
+    compile "com.google.android.gms:play-services-wearable:${gpsVersion}"
+    compile "com.google.android.gms:play-services-places:${gpsVersion}"
 }
