--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -176,6 +177,9 @@
             android:name=".gcm.RegistrationIntentService"
             android:exported="false" >
         </service>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="3a25ffae919932b802608eb23c284a980ce20d04" />
     </application>
 
 </manifest>
