--- a/mywearapplication/build.gradle
+++ b/mywearapplication/build.gradle
@@ -1,22 +1,31 @@
 apply plugin: 'com.android.application'
 
-
 android {
+    signingConfigs {
+        config {
+            keyAlias 'keyalias'
+            keyPassword '675rulE'
+            storeFile file('/home/todd/workspace/Nano-Proj-6-Sunshine-Wear/keystore.jks')
+            storePassword '675rulE'
+        }
+    }
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
-
     defaultConfig {
         applicationId "com.example.android.sunshine.app"
         minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
