--- a/mywearapplication/src/main/AndroidManifest.xml
+++ b/mywearapplication/src/main/AndroidManifest.xml
@@ -7,11 +7,14 @@
     <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
-        <activity android:name=".MainActivity" android:label="@string/app_name">
+        <activity android:name=".MainActivity" android:label="@string/app_name"
+            android:allowEmbedded="true">
+            <meta-data android:name="com.google.android.clockwork.home.preview"
+                android:resource="@drawable/ic_muzei" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="com.google.android.clockwork.home.category.HOME_BACKGROUND" />
             </intent-filter>
         </activity>
         <service android:name=".WatchUpdateService">
@@ -29,4 +32,5 @@
             android:value="@integer/google_play_services_version" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
