--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,23 +14,13 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
-apply plugin: 'com.google.gms.google-services'
-
 android {
-    signingConfigs {
-        config {
-            keyAlias 'keyalias'
-            keyPassword '675rulE'
-            storeFile file('/home/todd/workspace/Nano-Proj-6-Sunshine-Wear/keystore.jks')
-            storePassword '675rulE'
-        }
-    }
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 23
+    buildToolsVersion '23.0.3'
     defaultConfig {
         applicationId "com.example.android.sunshine.app"
         minSdkVersion 21
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -38,7 +28,6 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
         }
     }
     buildTypes.each {
@@ -48,8 +37,9 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    def supportVersion = '24.2.0'
-    def gpsVersion = '9.4.0'
+    wearApp project(':mywearapplication')
+    def supportVersion = '23.0.1'
+    def gpsVersion = '9.0.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile "com.android.support:support-annotations:${supportVersion}"
     compile "com.android.support:gridlayout-v7:${supportVersion}"
@@ -57,16 +47,13 @@ dependencies {
     compile "com.android.support:appcompat-v7:${supportVersion}"
     compile "com.android.support:design:${supportVersion}"
     compile "com.android.support:recyclerview-v7:${supportVersion}"
-    compile 'com.google.android.apps.muzei:muzei-api:2.0'
     compile "com.google.android.gms:play-services-gcm:${gpsVersion}"
-    compile "com.google.android.gms:play-services-location:${gpsVersion}"
     compile "com.google.android.gms:play-services-wearable:${gpsVersion}"
-    compile "com.google.android.gms:play-services-places:${gpsVersion}"
-    compile 'pl.tajchert:exceptionwear:0.1.2'
+    compile "com.google.android.gms:play-services-location:${gpsVersion}"
+    compile 'com.google.android.apps.muzei:muzei-api:2.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.2@aar') {
         transitive = true;
     }
-    compile "com.google.android.gms:play-services:${gpsVersion}@aar"
-    compile "com.android.support:support-v4:${supportVersion}"
-    wearApp project(':mywearapplication')
 }
+
+apply plugin: 'com.google.gms.google-services'
