--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,12 +15,12 @@ repositories {
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.3'
+    compileSdkVersion 24
+    buildToolsVersion '24.0.2'
     defaultConfig {
         applicationId "com.example.android.sunshine.app"
         minSdkVersion 21
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -38,8 +38,8 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     wearApp project(':mywearapplication')
-    def supportVersion = '23.0.1'
-    def gpsVersion = '9.0.0'
+    def supportVersion = '24.2.0'
+    def gpsVersion = '9.4.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile "com.android.support:support-annotations:${supportVersion}"
     compile "com.android.support:gridlayout-v7:${supportVersion}"
@@ -50,6 +50,7 @@ dependencies {
     compile "com.google.android.gms:play-services-gcm:${gpsVersion}"
     compile "com.google.android.gms:play-services-wearable:${gpsVersion}"
     compile "com.google.android.gms:play-services-location:${gpsVersion}"
+    compile "com.google.android.gms:play-services-places:${gpsVersion}"
     compile 'com.google.android.apps.muzei:muzei-api:2.0'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.2@aar') {
         transitive = true;
